// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Subscription Details renders subscription details for BASIC PLAN 1`] = `
<div
  class="card card-root"
  data-testid="subscription-details"
>
  <div
    class="card-header py-2"
  >
    <h5
      class="card-title"
    >
      <span
        class="text-3 text-secondary"
      >
        SUBSCRIPTION DETAILS
      </span>
    </h5>
  </div>
  <hr
    class="m-0"
  />
  <div
    class="card-body pb-0"
  >
    <div
      class="mb-2"
    >
      <span
        class="text-3 font-weight-semi-bold"
      >
        Basic
      </span>
    </div>
    <div
      class="d-flex justify-content-between mb-1"
    >
      <span
        class="text-3 text-secondary font-weight-semi-bold"
      >
        Individuals
      </span>
      <span
        class="text-3 text-secondary"
      >
        1,000
      </span>
    </div>
    <div
      class="d-flex justify-content-between mb-1"
    >
      <span
        class="text-3 text-secondary font-weight-semi-bold"
      >
        Page Views
      </span>
      <span
        class="text-3 text-secondary"
      >
        300,000
      </span>
    </div>
    <div
      class="d-flex justify-content-between mb-1"
    >
      <span
        class="text-3 text-secondary font-weight-semi-bold"
      >
        Workspace Users
      </span>
      <span
        class="text-3 text-secondary"
      >
        Unlimited
      </span>
    </div>
  </div>
</div>
`;

exports[`Subscription Details renders subscription details for BUSINESS PLAN 1`] = `
<div
  class="card card-root"
  data-testid="subscription-details"
>
  <div
    class="card-header py-2"
  >
    <h5
      class="card-title"
    >
      <span
        class="text-3 text-secondary"
      >
        SUBSCRIPTION DETAILS
      </span>
    </h5>
  </div>
  <hr
    class="m-0"
  />
  <div
    class="card-body pb-0"
  >
    <div
      class="mb-2"
    >
      <span
        class="text-3 font-weight-semi-bold"
      >
        Business
      </span>
    </div>
    <div
      class="d-flex justify-content-between mb-1"
    >
      <span
        class="text-3 text-secondary font-weight-semi-bold"
      >
        Individuals
      </span>
      <span
        class="text-3 text-secondary"
      >
        10,000
      </span>
    </div>
    <div
      class="d-flex justify-content-between mb-1"
    >
      <span
        class="text-3 text-secondary font-weight-semi-bold"
      >
        Page Views
      </span>
      <span
        class="text-3 text-secondary"
      >
        5,000,000
      </span>
    </div>
    <div
      class="d-flex justify-content-between mb-1"
    >
      <span
        class="text-3 text-secondary font-weight-semi-bold"
      >
        Workspace Users
      </span>
      <span
        class="text-3 text-secondary"
      >
        Unlimited
      </span>
    </div>
  </div>
  <div
    class="card-header pb-2"
  >
    <h5
      class="card-title"
    >
      <span
        class="text-3 text-secondary"
      >
        PURCHASED ADD-ONS
      </span>
    </h5>
  </div>
  <div
    class="card-body"
  >
    <hr
      class="mt-0"
    />
    <div
      class="mb-2"
    >
      <span
        class="text-3 text-secondary"
      >
        Tailor limits to business needs. Incrementally increase individual or page view limits as needed without committing to a new plan.
      </span>
    </div>
    <div
      class="d-flex justify-content-between mb-1"
    >
      <span
        class="text-3 text-secondary font-weight-semi-bold"
      >
        Individuals
      </span>
      <span
        class="text-3 text-secondary"
      >
        5,000
      </span>
    </div>
    <div
      class="d-flex justify-content-between mb-1"
    >
      <span
        class="text-3 text-secondary font-weight-semi-bold"
      >
        Page Views
      </span>
      <span
        class="text-3 text-secondary"
      >
        5,000,000
      </span>
    </div>
  </div>
</div>
`;

exports[`Subscription Details renders subscription details for ENTERPRISE PLAN 1`] = `
<div
  class="card card-root"
  data-testid="subscription-details"
>
  <div
    class="card-header py-2"
  >
    <h5
      class="card-title"
    >
      <span
        class="text-3 text-secondary"
      >
        SUBSCRIPTION DETAILS
      </span>
    </h5>
  </div>
  <hr
    class="m-0"
  />
  <div
    class="card-body pb-0"
  >
    <div
      class="mb-2"
    >
      <span
        class="text-3 font-weight-semi-bold"
      >
        Enterprise
      </span>
    </div>
    <div
      class="d-flex justify-content-between mb-1"
    >
      <span
        class="text-3 text-secondary font-weight-semi-bold"
      >
        Individuals
      </span>
      <span
        class="text-3 text-secondary"
      >
        100,000
      </span>
    </div>
    <div
      class="d-flex justify-content-between mb-1"
    >
      <span
        class="text-3 text-secondary font-weight-semi-bold"
      >
        Page Views
      </span>
      <span
        class="text-3 text-secondary"
      >
        60,000,000
      </span>
    </div>
    <div
      class="d-flex justify-content-between mb-1"
    >
      <span
        class="text-3 text-secondary font-weight-semi-bold"
      >
        Workspace Users
      </span>
      <span
        class="text-3 text-secondary"
      >
        Unlimited
      </span>
    </div>
  </div>
  <div
    class="card-header pb-2"
  >
    <h5
      class="card-title"
    >
      <span
        class="text-3 text-secondary"
      >
        PURCHASED ADD-ONS
      </span>
    </h5>
  </div>
  <div
    class="card-body"
  >
    <hr
      class="mt-0"
    />
    <div
      class="mb-2"
    >
      <span
        class="text-3 text-secondary"
      >
        Tailor limits to business needs. Incrementally increase individual or page view limits as needed without committing to a new plan.
      </span>
    </div>
    <div
      class="d-flex justify-content-between mb-1"
    >
      <span
        class="text-3 text-secondary font-weight-semi-bold"
      >
        Individuals
      </span>
      <span
        class="text-3 text-secondary"
      >
        5,000
      </span>
    </div>
    <div
      class="d-flex justify-content-between mb-1"
    >
      <span
        class="text-3 text-secondary font-weight-semi-bold"
      >
        Page Views
      </span>
      <span
        class="text-3 text-secondary"
      >
        5,000,000
      </span>
    </div>
  </div>
</div>
`;

exports[`UsageOverview should render 1`] = `
<div>
  <div
    class="settings-base-page-root"
  >
    <div
      class="maintenance-alert-root"
    />
    <div
      class="content-header has-page-actions"
    >
      <div
        class="header-text"
      >
        <div
          class="d-flex"
        >
          <h3
            class="title-text text-truncate"
          >
            <span
              class="text-truncate"
              data-tooltip="false"
              title=""
            >
              Subscription & Usage
            </span>
          </h3>
        </div>
        <div
          class="description"
        >
          Plans are limited by the total amount of individuals and page views.
        </div>
      </div>
      <div
        class="page-actions-container"
      >
        <a
          class="button-root btn btn-primary"
          href="https://support.liferay.com/"
          rel="noreferrer noopener"
          target="_blank"
        >
          <svg
            class="lexicon-icon lexicon-icon-shortcut mr-2"
            role="presentation"
          >
            <use
              href="#shortcut"
            />
          </svg>
          Manage Subscriptions
          <span
            class="sr-only"
          >
            (Opens a new window)
          </span>
        </a>
      </div>
    </div>
    <div>
      <div
        class="row"
      >
        <div
          class="col-xl-8"
        >
          <div
            class="card card-root"
          >
            <div
              class="card-header"
            >
              <h5
                class="card-title"
              >
                Usage Limits
              </h5>
            </div>
            <div
              class="card-body"
            >
              <p>
                <span
                  class="text-3 text-secondary"
                >
                  When either limit is exceeded, the current plan will either have to be upgraded or add-ons will have to be purchased to accommodate the overage.
                </span>
              </p>
              <p
                data-testid="next-anniversary-date"
              >
                <span
                  class="text-3 text-secondary"
                >
                  Plan usage resets on 
                  <b>
                    Jul 08, 2019
                  </b>
                  .
                </span>
              </p>
              <div
                class="my-4"
              >
                <h3
                  class="text-secondary"
                >
                  Individuals
                </h3>
                <div
                  class="d-flex align-items-center"
                >
                  <div
                    class="sticker sticker-root sticker-static sticker-rounded sticker-dark"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-ac-individual icon-root"
                      role="presentation"
                    >
                      <use
                        href="#ac-individual"
                      />
                    </svg>
                  </div>
                  <div
                    class="m-2"
                  >
                    <span
                      class="mr-2"
                    >
                      <h2
                        class="m-0 d-inline"
                      >
                        2,057
                      </h2>
                       of 
                      <span
                        class="text-3 font-weight-semi-bold"
                      >
                        105,000
                      </span>
                    </span>
                    <span
                      class="text-3 text-secondary font-weight-semi-bold"
                    >
                      2% since Jul 08, 2018.
                    </span>
                    <div>
                      <span
                        class="text-3 text-muted font-weight-semi-bold"
                      >
                        Enterprise Plan 95,000 + 5,000 Add-On (2x)
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="metric-bar-root"
                >
                  <div
                    class="bar bar-primary bar-default"
                    style="width: 2%;"
                  />
                </div>
                <div
                  class="metric-definition text-secondary"
                >
                  Contacts with a known email address that are synced to Analytics Cloud.
                </div>
              </div>
              <div
                class="mt-4"
              >
                <h3
                  class="text-secondary"
                >
                  Page Views
                </h3>
                <div
                  class="d-flex align-items-center"
                >
                  <div
                    class="sticker sticker-root sticker-static sticker-rounded sticker-dark"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-faro-page-views icon-root"
                      role="presentation"
                    >
                      <use
                        href="#faro-page-views"
                      />
                    </svg>
                  </div>
                  <div
                    class="m-2"
                  >
                    <span
                      class="mr-2"
                    >
                      <h2
                        class="m-0 d-inline"
                      >
                        100,023
                      </h2>
                       of 
                      <span
                        class="text-3 font-weight-semi-bold"
                      >
                        7,000,000
                      </span>
                    </span>
                    <span
                      class="text-3 text-secondary font-weight-semi-bold"
                    >
                      1.4% since Jul 08, 2018.
                    </span>
                    <div>
                      <span
                        class="text-3 text-muted font-weight-semi-bold"
                      >
                        Enterprise Plan 2,000,000 + 5,000,000 Add-On (1x)
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="metric-bar-root"
                >
                  <div
                    class="bar bar-primary bar-default"
                    style="width: 1%;"
                  />
                </div>
                <div
                  class="metric-definition text-secondary"
                >
                  Non-unique visits to any of the pages synced to Analytics Cloud.
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="col-xl-4"
        >
          <div
            class="card card-root"
            data-testid="subscription-details"
          >
            <div
              class="card-header py-2"
            >
              <h5
                class="card-title"
              >
                <span
                  class="text-3 text-secondary"
                >
                  SUBSCRIPTION DETAILS
                </span>
              </h5>
            </div>
            <hr
              class="m-0"
            />
            <div
              class="card-body pb-0"
            >
              <div
                class="mb-2"
              >
                <span
                  class="text-3 font-weight-semi-bold"
                >
                  Enterprise
                </span>
              </div>
              <div
                class="d-flex justify-content-between mb-1"
              >
                <span
                  class="text-3 text-secondary font-weight-semi-bold"
                >
                  Individuals
                </span>
                <span
                  class="text-3 text-secondary"
                >
                  100,000
                </span>
              </div>
              <div
                class="d-flex justify-content-between mb-1"
              >
                <span
                  class="text-3 text-secondary font-weight-semi-bold"
                >
                  Page Views
                </span>
                <span
                  class="text-3 text-secondary"
                >
                  60,000,000
                </span>
              </div>
              <div
                class="d-flex justify-content-between mb-1"
              >
                <span
                  class="text-3 text-secondary font-weight-semi-bold"
                >
                  Workspace Users
                </span>
                <span
                  class="text-3 text-secondary"
                >
                  Unlimited
                </span>
              </div>
            </div>
            <div
              class="card-header pb-2"
            >
              <h5
                class="card-title"
              >
                <span
                  class="text-3 text-secondary"
                >
                  PURCHASED ADD-ONS
                </span>
              </h5>
            </div>
            <div
              class="card-body"
            >
              <hr
                class="mt-0"
              />
              <div
                class="mb-2"
              >
                <span
                  class="text-3 text-secondary"
                >
                  Tailor limits to business needs. Incrementally increase individual or page view limits as needed without committing to a new plan.
                </span>
              </div>
              <div
                class="d-flex justify-content-between mb-1"
              >
                <span
                  class="text-3 text-secondary font-weight-semi-bold"
                >
                  Individuals
                </span>
                <span
                  class="text-3 text-secondary"
                >
                  5,000
                </span>
              </div>
              <div
                class="d-flex justify-content-between mb-1"
              >
                <span
                  class="text-3 text-secondary font-weight-semi-bold"
                >
                  Page Views
                </span>
                <span
                  class="text-3 text-secondary"
                >
                  5,000,000
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
